--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   font-family: "Poppins", sans-serif;
 }
 
+
 body {
   background: radial-gradient(circle, rgba(14,49,226,1) 0%, rgba(70,187,252,1) 65%);
   margin: 0 auto;
@@ -251,7 +252,7 @@ section {
   border-radius: 10px;
 }
 
-/* Texto de Login/Cadastro */
+/* Texto de Login/Registo */
 .login_signup {
   font-size: 12px;
   text-align: center;
@@ -261,6 +262,10 @@ section {
 /* Footer */
 .footer {
   padding: 20px;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
+  margin-bottom: 1px;
+}
+.footer h5{
+  color: black
 }
