--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ section {
   justify-content: center;
   position: relative;
   z-index: 100;
+  margin: 0;
 }
 
 .nav {
-  width: 100%;
+  width: 100%!important;
   max-width: 1100px;
   display: flex;
   align-items: center;
@@ -97,8 +98,11 @@ section {
 .home {
   position: relative;
   width: 100%;
+  height: 100%;
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .home::before {
@@ -119,14 +123,13 @@ section {
 
 .form_container {
   position: fixed;
-  max-width: 320px;
-  width: 100%;
+  width: 50%;
   top: 50%;
   left: 50%;
+  padding: 50 0 0 0;
   transform: translate(-50%, -50%) scale(1.2);
   z-index: 101;
   background: #fff;
-  padding: 25px;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -142,7 +145,10 @@ section {
 
 .form {
   display: block;
+  top: 50%;
+  left: 50%;
 }
+
 
 .signup_form {
   display: none;
@@ -176,7 +182,7 @@ section {
 .input_box {
   position: relative;
   margin-top: 30px;
-  width: 100%;
+  width: 75%;
   height: 40px;
 }
 
